# ml-by-doing

./: README.md  pyproject.toml
data/: regression_data.csv
notebooks/: classifier.ipynb  crossentropyloss.ipynb  features.ipynb  perceptron.ipynb  regression.ipynb  regularization.ipynb  ridgeregression.ipynb
