[project]
name = "basics"
version = "0.1.0"
description = "Notebooks following ml-by-doing YouTube series"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
